--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,17 @@ before_install:
   - docker build -t rajdiv23/docker-react -f Dockerfile.dev .
   
 script: 
-  - docker run rajdiv23/docker-react npm run test -- --coverage    
+  - docker run rajdiv23/docker-react npm run test -- --coverage
+  
+deploy:
+  provider: elasticbeanstalk    
+  region: "us-east-1"
+  app: "docker"
+  env: "Docker-env"
+  bucket_name: "elasticbeanstalk-us-east-1-532986263260"
+  bucket_path: "docker"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "AWS_SECRET_KEY"  
